[gd_scene load_steps=13 format=3 uid="uid://cd8ey6ba18dst"]

[ext_resource type="Texture2D" uid="uid://t8676ni3vk75" path="res://assets/sprites/chest_closed.png" id="1_hufol"]
[ext_resource type="Script" path="res://scripts/wing_chest.gd" id="1_oldu5"]
[ext_resource type="Texture2D" uid="uid://xv42mawq0vh6" path="res://assets/sprites/wings.png" id="2_g6236"]
[ext_resource type="Texture2D" uid="uid://brtonmeo5dk70" path="res://assets/sprites/chest_open.png" id="2_jps04"]
[ext_resource type="Texture2D" uid="uid://bd3kwm8awfqbv" path="res://assets/sprites/enter_small.png" id="5_27hhc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wdly1"]
radius = 36.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ajams"]
atlas = ExtResource("1_hufol")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bwqk"]
atlas = ExtResource("2_jps04")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_etw7e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajams")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bwqk")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_m5fmc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wings:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"closed"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wings:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Wings:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_r0dwr"]
resource_name = "wings"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wings:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"open"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wings:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -18), Vector2(0, -15), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Wings:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hv7iu"]
_data = {
"RESET": SubResource("Animation_m5fmc"),
"wings": SubResource("Animation_r0dwr")
}

[node name="WingsChest" type="Area2D"]
collision_mask = 2
script = ExtResource("1_oldu5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wdly1")

[node name="Wings" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_g6236")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_etw7e")
animation = &"closed"
autoplay = "closed"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hv7iu")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="EnterPrompt" type="Sprite2D" parent="."]
visible = false
position = Vector2(17, -21)
texture = ExtResource("5_27hhc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
